# RetroMol_depr

./: .bumpversion.cfg  .gitignore  .pylintrc  README.md  _alignment_test_1.py  _alignment_test_2.py  _parsing_test_1.py  draw_failed_compounds.py  environment.yml  playground.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: build-freeze.yml  build-package.yml  main.yml  tests.yml
analysis/: analyze_result.py  forward_synthesis.py  generate_polyketides.py  visualize_molecule.py  visualize_monomer_graph.py
app/: Dockerfile.database  Dockerfile.server  README.md  docker-compose.yml  run_docker.sh
app/client/: package-lock.json  package.json
app/server/: requirements.txt  server.py
bioactivity_model/: donphan_dataset.csv  evaluate_generated_polyketides.py  generated_polyketides.txt  predict_bioactivity.py  train_bioactivity_model.py
clustering/: cluster_sequences.py  get_nearest_neighbors_and_align.py
clustering/aligner/: aligner.py  alignment_matrix.py  parser.py  scoring_matrix.py
data/: core_units.json  motif_units.json  other_units.json  reaction_rules.json  rules.json
data/input/: compounds.tsv  sample.csv
data/rules/: rules.json  rules_modular_natural_products.json
database/: README.md  annotate_bioactivity_DONPHAN.py  annotate_clusters_mibig.py  annotate_compound_bioactivity.py  populate_compounds_npatlas.py  populate_proto_clusters.py  populate_with_compounds.py
database/annotate_biosynthetic_sequences/: annotate_biosynthetic_sequence.py  retrieve_compounds.py
examples/daptomycin/: output.json
examples/erythromycin/: output.json
examples/gephyronic_acid/: output.json
figures/figure1/: step1_evaluate_results.py  step2_make_Sankey_diagram.py
figures/figure2/: step1_embed_compounds.py  step2_visualize_chemospace_on_success copy.py  (+1 more)
generative_model/: generate_molecules.py
npatlas/: parse_compounds_from_npatlas.py  parsed_compounds.tsv
retromol/: alignment.py  antismash.py  chem.py  cli.py  drawing.py  graph.py  helpers.py  parsing.py  sequencing.py
scripts/: alignment.py  analyze_sequences.py  create_scoring_matrix.py  deorphanize.py  deorphanize_antismash_protoclusters.py  download_data.py  fast_pairwise_search.py  index_asdb.py  msa.py  parse_antismash_job.py  parse_antismash_result.py  parse_asdb.py  parse_gcf.py  parse_npatlas.py  pmi_analysis.py  retrieve_primary_sequences.py  run_single.sh  train_motif_classifier.py  visualize_CGR_example.py  visualize_molecule.py  visualize_monomer_graph.py  visualize_output.py  visualize_results.py
src/: main.py
src/retromol/: __init__.py  (+11 more)
tests/: test_alignment.py  test_chem.py  test_example.py  test_integration.py  test_modular_natural_products.py  test_parsing.py  test_retromol.py
visualization/: visualize_monomer_graph.py
(+82 files in other folders)
