[tool.poetry]
name = "retromol"
version = "1.0.0"
description = "RetroMol: A Python package for retrosbiosynthetic analysis of natural product compounds"
authors = ["David Meijer <david.meijer@wur.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
rdkit = "^2023.9.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
