[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retromol"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Meijer", email = "david.meijer@wur.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy >= 1.26.4",
    "rdkit >= 2023.9.5",
]

[project.optional-dependencies]
# development dependency groups
test = [
    "pytest >= 8.1.1",
    "coverage",
    "pytest-cov",
]
publishing = ["build", "twine", "wheel"]

[project.urls]
Repository = "https://github.com/moltools/RetroMol"

[tool.coverage.run]
branch = true
source = ["retromol"]

[tool.setuptools.packages.find]
include = ["retromol"]
exclude = ["tests", "tests*", "*tests.*", "*tests"]