[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retromol"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Meijer", email = "david.meijer@wur.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "matplotlib >= 3.8.4",
    "networkx >= 3.3",
    "numpy >= 1.26.4",
    "rdkit >= 2023.9.5",
    "scipy >= 1.13.0",
]

[project.optional-dependencies]
# development dependency groups
test = [
    "coverage",
    "pylint",
    "pytest >= 8.1.1",
    "pytest-cov",
]
database = [
    "neo4j",
    "tqdm",
]
publishing = ["build", "twine", "wheel"]

[project.urls]
Repository = "https://github.com/moltools/RetroMol"

[project.scripts]
retromol = "retromol.cli:main"

[tool.coverage.run]
branch = true
source = ["retromol"]

[tool.setuptools.packages.find]
include = ["retromol"]
exclude = ["tests", "tests*", "*tests.*", "*tests"]